--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,10 +15,15 @@ jobs:
       with:
         go-version: 1.20.3
     
-    - name: Build
+    - name: Install depedencies
+      run: |
+        go mod download
+        go mod tidy -v
+
+    - name: Build project
       run: |
         make build
     
-    - name: Test
+    - name: Test project
       run: |
         make test
