--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -27,3 +27,23 @@ jobs:
     - name: Test project
       run: |
         make test
+  
+  Publish:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.20.3
+    
+    - name: Install depedencies
+      run: |
+        go mod download
+        go mod tidy -v
+    
+    - name: Publish to production
+      run: |
+        make production/deploy
